Bug 291043 - After changing home directory in settings dialog, 'Home' button in menu or toolbar still navigates to the old home directory in existing tabs.
Summary: After changing home directory in settings dialog, 'Home' button in menu or to...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-09 11:10 UTC by Jekyll Wu
Modified: 2012-01-31 16:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-01-09 11:10:05 UTC
Version:           2.0 (using Devel) 
OS:                Linux

It seems once a tab has been created, it always use the home directory when it was created as its home directory. The result is 'Home' button will navigate to different places in existing tabs and new tabs. That is inconsistent and potentially confusing.


Reproducible: Always

Steps to Reproduce:
1). open dolphin, navigate to some directory, then change home directory to, say, /tmp
2). make sure the existing tab (call it tab A) is the active tab, then press 'Home' button
3). open a new tab (call it tab B)
4). make sure tab B is the active tab, then press 'Home' button


Actual Results:  
2). after pressing 'Home' button, path is old home directory
2). after pressing 'Home' button, path is /tmp


Expected Results:  
2). after pressing 'Home' button, path is /tmp
4). after pressing 'Home' button, path is /tmp
Comment 1 Peter Penz 2012-01-31 16:18:26 UTC
Git commit c93dd9f4a2626b6c16256f4774bf48268527b923 by Peter Penz.
Committed on 31/01/2012 at 13:29.
Pushed by ppenz into branch 'master'.

Apply changed home-URL to the URL navigator
FIXED-IN: 4.8.1

M  +1    -0    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/c93dd9f4a2626b6c16256f4774bf48268527b923
Comment 2 Peter Penz 2012-01-31 16:18:39 UTC
Git commit d03d06a92f3af9fe88ead0d50ced7de55f408c83 by Peter Penz.
Committed on 31/01/2012 at 13:29.
Pushed by ppenz into branch 'KDE/4.8'.

Apply changed home-URL to the URL navigator
FIXED-IN: 4.8.1

M  +1    -0    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/d03d06a92f3af9fe88ead0d50ced7de55f408c83