Apply changed home-URL to the URL navigator

BUG: 291043
FIXED-IN: 4.8.1